# blobodbc

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.forgejo/workflows/: build-and-publish.yml
catalog/postgresql/: columns.yml  foreign_keys.yml  primary_keys.yml  tables.yml
catalog/sqlserver/: tables.yml
duckdb_ext/: append_metadata.py
duckdb_ext/src/: blobodbc_duckdb.c
ext/duckdb/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/duckdb/blobodbc_duckdb/: __init__.py
ext/sqlite/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/sqlite/blobodbc_sqlite/: __init__.py
include/: blobodbc.h
python/: bindings.cpp
python/blobodbc/: intern.py  models.py  sampler.py  seed.py  ttst_models.py
sql/: poll_catalogs.sql
sqlite_ext/src/: blobodbc_sqlite.c
src/: blobodbc_core.cpp
test/: connections.toml.example  test_driver_info_duckdb.py  test_driver_probe.py  test_duckdb.sql  test_sqlite.sql
