[build-system]
requires = ["scikit-build-core>=0.5", "nanobind>=1.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobodbc"
version = "0.2.0"
description = "ODBC query execution returning JSON, as scalar functions for SQLite, DuckDB, and Python"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[project.urls]
Repository = "https://github.com/phrrngtn/blobodbc"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/blobodbc"]
