[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobodbc-duckdb"
version = "0.2.2"
description = "ODBC query execution returning JSON — Duckdb extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.scikit-build]
wheel.packages = ["blobodbc_duckdb"]
sdist.include = ["src/**", "include/**", "duckdb_ext/**"]
